[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/GUI/Menus/Lumina.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/Ubuntu-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/GUI/Menus/BorderSmokeBlue.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/Menus/RectangleSmokeBlue.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Menus/RectangleSmokePurple.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/Menus/RectangleSmokeOrange.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Ubuntu-Medium.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=8]
[ext_resource path="res://Assets/SFX/SoundTracks/_Blood_and_Wine_OST_-_Lady_Of_The_Lake_(EXTENDED)(256k).mp3" type="AudioStream" id=9]
[ext_resource path="res://Scn/Particles3.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scn/Particles4.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 1
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
use_filter = true
font_data = ExtResource( 7 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1025, 600 )
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 50.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.25098, 0.588235, 0.588235, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Eclipse:
The Celestial Prodigy"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 130.0
margin_top = -40.0
margin_right = 350.0
margin_bottom = 40.0

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 350.0
margin_bottom = 80.0
rect_min_size = Vector2( 350, 80 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0117647, 0.929412, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.87451, 0.654902, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Begin The Journey"
align = 1
valign = 1

[node name="OptionButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 350.0
margin_bottom = 164.0
rect_min_size = Vector2( 350, 80 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/OptionButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0117647, 0.929412, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.87451, 0.654902, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 1
valign = 1

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 350.0
margin_bottom = 248.0
rect_min_size = Vector2( 350, 80 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0117647, 0.929412, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.87451, 0.654902, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="Particles" parent="." instance=ExtResource( 10 )]
position = Vector2( 317, 96 )

[node name="Particles3" parent="." instance=ExtResource( 11 )]
position = Vector2( 1215, 757 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
